--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -37,7 +37,7 @@ iframe[name*='dupe-frame']
   perspective-origin center center
   background-image url(../images/city.svg)
   background-size cover
-  background-position center 0%
+  background-position 0% 0%
   transition all ease 1s
 
 .formula
