--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -14,7 +14,7 @@
       overflow hidden
 
   input[type='checkbox']
-    opacity 0
+    // opacity 0
     position absolute
     width 125px
     left 41%
