--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -120,6 +120,11 @@ iframe[name*='dupe-frame']
         position relative
         top -1px
 
+    .place
+      position absolute
+      right 20px
+      top 20px
+
     .thanks
       display none
       position absolute
