--- a/app/styles/formula-inputs.styl
+++ b/app/styles/formula-inputs.styl
@@ -14,14 +14,16 @@
       overflow hidden
 
   input[type='checkbox']
+    // (josh) this is the most shameful thing ive ever done
     opacity 0
     position absolute
-    width 125px
-    left 41%
+    width 130px
+    left 22%
     max-height none
-    height 125px
+    height 20px
     z-index 1
     cursor pointer
+    background-color red
 
     &+label
       display block
