--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -328,6 +328,15 @@ iframe[name*='dupe-frame']
   &:hover
     border 1px solid rgba(0,0,0,0.2)
 
+.fa
+  margin-left 20px
+  margin-right 20px
+  color #1DACD6
+  transition all .5s ease
+
+.fa:hover
+  color #06c
+
 // FUKKKKKKiNG FIREFOX
 // NOTE  the build kills the moz keyframes because it's a bitch about this shit.
 // soooooo... ugh. copy this line every time it builds and you want to save.
