--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -45,6 +45,13 @@ iframe[name*='dupe-frame']
   transition all ease 1s
   max-height 100%
 
+  p
+    text-align center
+    padding 0
+
+    &+.input-group
+      margin-top 0
+
   form
     position relative
     transition all ease 0.5s
@@ -57,6 +64,7 @@ iframe[name*='dupe-frame']
     background-image url(../images/epic-logo.png)
     background-size contain
     background-repeat no-repeat
+    background-position center center
     width 300px
     height 300px
     display block
@@ -121,8 +129,9 @@ iframe[name*='dupe-frame']
       position absolute
       text-align center
       width 100%
+      height 100%
       opacity 0
-      top 115px
+      padding-top 200px
       transition all ease 1s
       // firefox, you are a bitch.
       transform rotateY(180deg)
