--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -49,6 +49,13 @@ iframe[name*='dupe-frame']
   transition all ease 1s
   max-height 100%
 
+  p
+    text-align center
+    padding 0
+
+    &+.input-group
+      margin-top 0
+
   form
     position relative
     transition all ease 0.5s
@@ -59,8 +66,9 @@ iframe[name*='dupe-frame']
 
   .header
     background-image url(../images/wildhacks-logo.svg)
-    background-size contain
+    background-size 85%
     background-repeat no-repeat
+    background-position center center
     width 300px
     height 300px
     display block
@@ -130,8 +138,9 @@ iframe[name*='dupe-frame']
       position absolute
       text-align center
       width 100%
+      height 100%
       opacity 0
-      top 115px
+      padding-top 200px
       transition all ease 1s
       // firefox, you are a bitch.
       transform rotateY(180deg)
