--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -52,15 +52,15 @@ html
             .forcefield
               h2 Welcome to the WildHacks Application!
               .input-group
-                input#first-name(type="text", name='entry.354342888', required)
+                input#first-name(type="text", required)
                 label First Name*
                 .glance
               .input-group
-                input#last-name(type="text", name='entry.436547589', required)
+                input#last-name(type="text", required)
                 label Last Name*
                 .glance
               .input-group
-                input#school(type="text", name='entry.1486322634', required)
+                input#school(type="text", required)
                 label School*
                 .glance
 
@@ -70,15 +70,15 @@ html
             .forcefield
               h2 Some Basic Info
               .input-group
-                input#year(type="text", name='entry.1494609428', required)
+                input#year(type="text", required)
                 label Class Year (eg: 2017)*
                 .glance
               .input-group
-                input#major(type="text", name='entry.252100536', required)
+                input#major(type="text", required)
                 label Major*
                 .glance
               .input-group
-                input#travel(type='text', name='', required)
+                input#travel(type='text', required)
                 label Where will you be traveling from?*
                 .glance
 
@@ -88,11 +88,11 @@ html
             .forcefield
               h2 Where Can We Find You?
               .input-group
-                input#github(type="text", name='')
+                input#github(type="text")
                 label Github Link
                 .glance
               .input-group
-                input#website(type="text", name='')
+                input#website(type="text")
                 label Website
                 .glance
 
@@ -102,7 +102,7 @@ html
             .forcefield
               h2 Do You Have a Resume?
               .input-group
-                input#resume(type='text', name='', required, disabled)
+                input#resume(type='text', required, disabled)
                 label#resume-btn Click here to upload it
                 .glance
 
@@ -148,11 +148,11 @@ html
                 // (jordan) nbsp hacksss
                 label No&nbsp;
               .input-group
-                input#teammates(type='text', name='')
+                input#teammates(type='text')
                 label Please list emails of teammates, if any, separated by commas:
                 .glance
               .input-group
-                input#mlh-code-of-conduct(type='checkbox', name='', required)
+                input#mlh-code-of-conduct(type='checkbox' required)
                 label I agree to the #[a(href='http://static.mlh.io/docs/mlh-code-of-conduct.pdf') MLH Code of Conduct.]*
 
           .primary-window.page
@@ -162,7 +162,7 @@ html
               h2 Why do you want to come to WildHacks?
               //- (josh) i know this should probably be an essay question but im not about to fux with a mixin when i can just slap a place number on a textarea, ya dig
               .input-group
-                textarea#explain-skills(name='entry.549867061', required)
+                textarea#why-do-you-want-to-come(required)
                 label It's okay, we can take the truth.
             .thanks
               h3 Thanks for applying! Be sure to follow us for updates!
