Namespace css files and remove google form endpoint

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -12,7 +12,7 @@ html
     // endbower
     // endbuild
 
-    // build:css styles/main.css
+    // build:css styles/formula.css
     link(rel='stylesheet', href='styles/main.css')
     // endbuild
 
@@ -205,16 +205,15 @@ html
       a(href="http://www.olark.com?welcome", title="Olark live chat software") Olark live chat software
     // end olark code
 
-    // vendor.js is currently empty
-    // build:js scripts/vendor.js
-    script(type='text/javascript', src='bower_components/store/dist/store2.min.js')
+    // build:js scripts/formula-vendor.js
     // bower:js
+    script(type='text/javascript', src='bower_components/store/dist/store2.min.js')
     // endbower
     // endbuild
 
     script(type="text/javascript", src="//api.filepicker.io/v1/filepicker.js" async)
 
-    // build:js scripts/main.js
+    // build:js scripts/formula.js
     script(src='scripts/extensions.js' async)
     script(src='scripts/formula_anim.js' async)
     script(src='scripts/formula_notify.js' async)
