Small distribution and style tweaks

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -103,7 +103,7 @@ html
               h2 Do You Have a Resume?
               .input-group
                 input#resume(type='text', required, disabled)
-                label#resume-btn Click here to upload it
+                label#resume-btn Click to Update
                 .glance
 
           .primary-window.page
