--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -81,7 +81,7 @@ iframe[name*='dupe-frame']
 
   .primary-window
     border-radius 4px
-    box-shadow 0 0 15px rgba(0,0,0,0.2)
+    box-shadow 0 0 5px rgba(0,0,0,0.1)
     position absolute
 
     width 100%
@@ -201,9 +201,7 @@ iframe[name*='dupe-frame']
       left -30px
     .primary-window.page
       transform rotateY(-1deg) translateZ(-8px)
-      box-shadow inset 0 30px rgba(0,0,0,0.015),
-                 inset 0 25px rgba(0,0,0,0.02),
-                 inset 0 10px rgba(0,0,0,0.025)
+      box-shadow none
 
     .next-btn
       height formula-height + 6px
