added website link

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -178,6 +178,7 @@ html
                 label It's okay, we can take the truth.
             .thanks
               h3 Thanks for applying! Be sure to follow us for updates!
+              a(href="http://wildhacks.org", target="_blank") <i class="fa fa-globe fa-5x"></i>
               a(href="https://www.facebook.com/nuwildhacks", target="_blank") <i class="fa fa-facebook-official fa-5x"></i>
               a(href="https://twitter.com/NUWildHacks", target="_blank") <i class="fa fa-twitter fa-5x"></i>
 
