Fix missing select data on submit and unclickable links on thanks

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -263,9 +263,12 @@ iframe[name*='dupe-frame']
         transition none
         transform rotateY(180deg)
 
+      .primary-window.current .forcefield
+        display none
 
       .thanks
         opacity 1
+        left 700px
         transform rotateY(180deg) translateX(700px)
         @media all and (max-height 800px)
           transform rotateY(180deg) translateX(650px)
