Add participate in launch to 'I want to' options

--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -80,6 +80,25 @@ html
           .primary-window.page
             i.back-btn Back
             .forcefield
+              h2 I want to...
+              .input-group.checkboxes
+                input#build-a-startup(type='checkbox', required)
+                label Build a Startup
+
+                input#run-a-hackathon(type='checkbox', required)
+                label Run a Hackathon
+
+                input#learn-to-code(type='checkbox', required)
+                label Learn to Code
+
+                input#teach-entrepreneurship(type='checkbox', required)
+                label Teach Entrepreneurship
+
+                input#participate-in-launch(type='checkbox')
+                label Participate in Launch
+          .primary-window.page
+            i.back-btn Back
+            .forcefield
               h2 I am a...
               .input-group.checkboxes
                 input#hacker(type='checkbox', name='entry.2003569147', required)
@@ -88,8 +107,6 @@ html
                 label Designer
                 input#builder(type='checkbox', name='entry.711584580', required)
                 label Builder
-                input#dinosaur(type='checkbox', name='entry.1762834979', required)
-                label Dinosaur
               .input-group
                 textarea#explain-skills(name='entry.549867061', required)
                 label Explain your selections
