--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -80,6 +80,16 @@ html
           .primary-window.page
             i.back-btn Back
             .forcefield
+              h2 I am applying to (select as many as apply):
+              .input-group.checkboxes
+                input#apply-for-launch(type='checkbox', required)
+                label Participate in Launch
+
+                input#apply-for-epic(type='checkbox', required)
+                label Join EPIC Teams
+          .primary-window.page
+            i.back-btn Back
+            .forcefield
               h2 I want to...
               .input-group.checkboxes
                 input#build-a-startup(type='checkbox', required)
@@ -93,9 +103,6 @@ html
 
                 input#teach-entrepreneurship(type='checkbox', required)
                 label Teach Entrepreneurship
-
-                input#participate-in-launch(type='checkbox')
-                label Participate in Launch
           .primary-window.page
             i.back-btn Back
             .forcefield
