Small fixes and untrack index.html

--- a/app/styles/_base.styl
+++ b/app/styles/_base.styl
@@ -10,21 +10,19 @@ html
 
 body
   //background linear-gradient(#105d7f 1%,#305778 2%,#63b5ce 55%,#63b5ce 99%,#70caff 100%)
-  background radial-gradient(circle, #c03d43 0%, #902025 72%, #481013 100%)
+  background radial-gradient(circle, #c03d43 0%, #902025 72%, #63161a 100%)
   background-attachment fixed
   margin 0
   height 100%
   max-height 100%
 
-// tyopography
-
+// typography
 h1, h2, h3, h4, h5, h6
   padding 0 15px
   font-weight 300
   text-align center
 
 // horizontal rules
-
 hr
   margin 0 15px
   border-color #eee
