--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -61,14 +61,14 @@ iframe[name*='dupe-frame']
 
 
   .header
-    background-image url(../images/epic-logo.png)
+    background-image url(../images/nuvc-logo-backed.png)
     background-size contain
     background-repeat no-repeat
     background-position center center
-    width 300px
-    height 300px
+    width 225px
+    height 225px
     display block
-    margin 0 auto
+    margin 30px auto
     z-index 2
     position relative
     // safari
@@ -105,6 +105,25 @@ iframe[name*='dupe-frame']
       opacity 1
       -webkit-transform translateZ(0px)
 
+    i.no-more-applicants-btn
+      max-width 150px
+      position absolute
+      right 20px
+      top 20px
+      font-syle normal
+      color rgba(0,0,0,0.5)
+      transition color ease 0.5s
+      cursor pointer
+      user-select none
+
+      &:hover
+        color rgb(0,0,0)
+
+      &:after
+        content '\2192'
+        margin-left 10px
+        position relative
+
     i.back-btn
       position absolute
       left 20px
@@ -131,7 +150,7 @@ iframe[name*='dupe-frame']
       width 100%
       height 100%
       opacity 0
-      padding-top 200px
+      padding-top 120px
       transition all ease 1s
       // firefox, you are a bitch.
       transform rotateY(180deg)
@@ -153,7 +172,7 @@ iframe[name*='dupe-frame']
 
   .next-btn
     position absolute
-    height formula-height - 4px
+    height formula-height - 10px
 
     top (header-height / 2)px
     right 0
