A handful of fixes to caching on non-required fields

--- a/app/styles/_base.styl
+++ b/app/styles/_base.styl
@@ -9,8 +9,8 @@ html
   overflow-x hidden
 
 body
-  //background linear-gradient(#105d7f 1%,#305778 2%,#63b5ce 55%,#63b5ce 99%,#70caff 100%)
-  background radial-gradient(circle, #c03d43 0%, #902025 72%, #63161a 100%)
+  background linear-gradient(#6d1080 1%,#723078 2%,#a363cf 55%,#9963cf 99%,#af70ff 100%)
+  //background radial-gradient(circle, #c03d43 0%, #902025 72%, #63161a 100%)
   background-attachment fixed
   margin 0
   height 100%
